# worklie

./: ARCHITECTURE.md  CLI_GUIDE.md  COMMAND_OUTPUT_REFERENCE.md  Cargo.toml  FEATURE_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  PHASE2_RELEASE_NOTES.md  PRODUCT_STRATEGY.md  QUICK_START.md  README.md  RELEASE_GUIDE.md  TEST_CASES.md
src/: cache.rs  cache_manager.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  output_formatter.rs  reliability.rs  security.rs  workspace.rs
src/analyzer/: activity_clusterer.rs  advanced_clustering.rs  commit_heatmap.rs  context_inference.rs  mod.rs  multi_repo_analyzer.rs  session.rs
src/collector/: data_collector.rs  git.rs  history.rs  mod.rs
src/parser/: git_parser.rs  history_parser.rs  mod.rs
src/report/: daily_report.rs  mod.rs  standup_report.rs  weekly_report.rs
tests/: integration_tests.rs  prop_tests.proptest-regressions  prop_tests.rs
